--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -10,6 +10,7 @@
 				p{margin-left: 40px;color: #333;}
 				i{width: 30px;height: 30px;border-radius: 50%;background: #eeeeee;display: block;position: absolute;top:50%;transform:translateY(50%);}
 			}
+			li.last:hover p{color: #ff527d};
 			.liHover{color:#ff527d;}
 			.active_lrx{border:4px solid #ff527d;}
 		}
