--- a/src/components/Home/home.module.scss
+++ b/src/components/Home/home.module.scss
@@ -3,5 +3,11 @@
 	
 	#homebox{
 		background: pink;
+		div#swiper{
+			width: 600px;height: 450px;
+				img{width: 100%;height: 100%;}
+		}
+		.button{}
+		
 	}
 }
