--- a/src/components/Nav/nav.module.scss
+++ b/src/components/Nav/nav.module.scss
@@ -21,6 +21,7 @@
 			.display{display: none;}
 		}
 	}
+	.hidden{display: none;}
 }
 	.clear:after{content: '';display: block;clear: both;}
 	.active_lrx{background: red;width: 100px;height: 20px;border:4px solid red;}
