--- a/src/components/Home/home.module.scss
+++ b/src/components/Home/home.module.scss
@@ -2,11 +2,8 @@
 	padding-top: 20px;
 	
 	#homebox{
-		background: pink;
-		div#swiper{
-			width: 600px;height: 450px;
-				img{width: 100%;height: 100%;}
-		}
+		background: pink;	
+		.swiperImg{width: 600px;height: 450px;}
 		.button{}
 		
 	}
