--- a/src/components/Home/home.module.scss
+++ b/src/components/Home/home.module.scss
@@ -2,9 +2,23 @@
 	padding-top: 20px;
 	
 	#homebox{
-		background: pink;	
+		background: pink;margin-bottom: 40px;	
 		.swiperImg{width: 600px;height: 450px;}
 		.button{}
 		
+	}
+	#hongren{
+		height: 350px;
+		div.hongrentitle{
+			width: 100%;height: 36px;line-height: 36px;position: relative;margin-bottom: 20px;
+			h2{font-size: 22px;}
+			a{	position: absolute;top:0;right: 0;font-size: 12px;color: #999;line-height: 40px;text-decoration: none;}
+			a:hover{color:#ff527d;}
+		}
+		div.hongrenlist{
+			width: 100%;
+			img{width: 224px;border-radius: 15px;}
+			img:hover{cursor: pointer;}
+		}
 	}
 }
